重构Metamodel